--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
     --color-blue-side: #3e7bfa;
     --color-red-side: #f52547;
     --color-surface: #2d2d2d;
-    --font-color-white: #e3d8d8;
+    --font-color-white: rgba(227, 216, 216, 0.66);
     --box-shadow: -5px 2px 10px 1px rgba(0, 0, 0, 0.66);
     --text-shadow: -3px 3px 2px rgba(0,0,0,0.66);
     background-color: #242424;
